--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dot": "^1.1.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0"
   }
